--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "frog": "latest",
     "hono": "^4",
     "pinata-fdk": "^3.5.6"
